Added GET /shard/{shardName}/posts/new and GET /shard/{shardName}/posts/popular to retrieve newest and most popular post headers on a shard, respectively